--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Le Laboratoire de l’Intégrité Académique.</tw-noscript></noscript></tw-story>
-<tw-storydata name="Le Laboratoire de l’Intégrité Académique" startnode="1" creator="Twine" creator-version="2.11.1" format="Harlowe" format-version="3.3.9" ifid="AI-ETHICS-GAME-005" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Start" tags="" position="25,25" size="100,100">&lt;img src=&quot;images/laboratoire.png&quot; alt=&quot;Laboratoire&quot; width=&quot;80%&quot;&gt;
+<tw-storydata name="Le Laboratoire de l’Intégrité Académique" startnode="1" creator="Twine" creator-version="2.11.1" format="Harlowe" format-version="3.3.9" ifid="AI-ETHICS-GAME-005" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Start" tags="" position="25,25" size="100,100">&lt;img src=&quot;laboratoire.png&quot; alt=&quot;Laboratoire&quot; width=&quot;80%&quot;&gt;
 
 Vous êtes enfermés dans le **Laboratoire de l’Intégrité Académique**.
 
@@ -25,7 +25,7 @@ Quatre zones sont accessibles :
 [[Vérifier la charte universitaire-&gt;Charte]]
 [[Accéder au terminal de sortie-&gt;Sortie]]
 
----</tw-passagedata><tw-passagedata pid="2" name="Bureau" tags="" position="150,25" size="100,100">&lt;img src=&quot;images/bureau.png&quot; alt=&quot;Bureau des devoirs&quot; width=&quot;70%&quot;&gt;
+---</tw-passagedata><tw-passagedata pid="2" name="Bureau" tags="" position="150,25" size="100,100">&lt;img src=&quot;bureau.png&quot; alt=&quot;Bureau des devoirs&quot; width=&quot;70%&quot;&gt;
 
 Vous entrez dans le **bureau des devoirs**.
 
@@ -61,13 +61,13 @@ puis vous reformulez le texte avec vos propres mots.
 
 Un tiroir s’ouvre sous le bureau.
 
-&lt;img src=&quot;images/code_papier.png&quot; alt=&quot;Indice&quot; width=&quot;40%&quot;&gt;
+&lt;img src=&quot;code_papier.png&quot; alt=&quot;Indice&quot; width=&quot;40%&quot;&gt;
 
 🔑 **Vous trouvez un chiffre : 7**
 
 [[Retour au laboratoire-&gt;Start]]
 
----</tw-passagedata><tw-passagedata pid="6" name="Prompts" tags="" position="650,25" size="100,100">&lt;img src=&quot;images/journal_prompts.png&quot; alt=&quot;Journal des prompts&quot; width=&quot;70%&quot;&gt;
+---</tw-passagedata><tw-passagedata pid="6" name="Prompts" tags="" position="650,25" size="100,100">&lt;img src=&quot;journal_prompts.png&quot; alt=&quot;Journal des prompts&quot; width=&quot;70%&quot;&gt;
 
 Vous consultez le **journal des prompts**.
 
@@ -108,7 +108,7 @@ Un écran secondaire s’allume :
 
 [[Retour au laboratoire-&gt;Start]]
 
----</tw-passagedata><tw-passagedata pid="10" name="Charte" tags="" position="1150,25" size="100,100">&lt;img src=&quot;images/charte.png&quot; alt=&quot;Charte universitaire&quot; width=&quot;70%&quot;&gt;
+---</tw-passagedata><tw-passagedata pid="10" name="Charte" tags="" position="1150,25" size="100,100">&lt;img src=&quot;charte.png&quot; alt=&quot;Charte universitaire&quot; width=&quot;70%&quot;&gt;
 
 Vous ouvrez la **charte universitaire sur l’usage de l’IA**.
 
@@ -138,7 +138,7 @@ Un message apparaît sur l’écran :
 
 [[Retour au laboratoire-&gt;Start]]
 
----</tw-passagedata><tw-passagedata pid="14" name="Sortie" tags="" position="400,150" size="100,100">&lt;img src=&quot;images/terminal.png&quot; alt=&quot;Terminal de sortie&quot; width=&quot;70%&quot;&gt;
+---</tw-passagedata><tw-passagedata pid="14" name="Sortie" tags="" position="400,150" size="100,100">&lt;img src=&quot;terminal.png&quot; alt=&quot;Terminal de sortie&quot; width=&quot;70%&quot;&gt;
 
 Vous êtes devant le **terminal de sortie**.
 
