--- a/index.html
+++ b/index.html
@@ -148,7 +148,16 @@ Un message s’affiche :
 
 Les indices que vous avez trouvés vous reviennent en mémoire.
 
-🖥️ **Entrez le code à 4 chiffres (format : 7-1-9-4)**
+Un dernier message apparaît à l’écran :
+
+&gt; *« Aucun système automatique ne peut garantir l’intégrité académique.  
+La vérification humaine est indispensable. »*
+
+Un chiffre apparaît lentement :
+
+🔑 **4**
+
+🖥️ **Entrez le code à 4 chiffres (format : 1-2-3-4)**
 
 (input-box: &quot;code&quot;)
 
